--- a/.gitignore
+++ b/.gitignore
@@ -16,10 +16,20 @@ develop-eggs
 # Installer logs
 pip-log.txt
 
-# PyDev
-.settings
+# Unit test / coverage reports
+.coverage
+.tox
+
+#Translations
+*.mo
+
+#Mr Developer
+.mr.developer.cfg
+
+#Pydev
 .project
 .pydevproject
+.settings
 
-# Gedit
-*~
+#Sphinx
+docs/_build
