--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,7 @@ language: python
 python:
   - 2.6
   - 2.7
-install: pip install -r requirements.txt --use-mirrors
+install
+  - pip install -r requirements.txt --use-mirrors
+  - pip install -r optional-requirements.txt --use-mirrors
 script: python setup.py test
