--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,5 @@
 language: python
 python:
-  - 2.6
-  - 2.7
-install
-  - pip install -r requirements.txt --use-mirrors
-  - pip install -r optional-requirements.txt --use-mirrors
+  - "2.7"
+install: pip install -r requirements.txt --use-mirrors
 script: python setup.py test
