--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,9 @@
 language: python
 python:
   - "2.7"
-install: pip install -r requirements.txt --use-mirrors
+install:
+  - pip install -r requirements.txt --use-mirrors
+  - pip install -r optional-requirements.txt --use-mirrors
 script: python setup.py test
+notifications:
+  irc: "irc.freenode.org#subliminal"
