Replace filesizes checks in unittests with subtitles validation
Use pysrt for subtitles validation

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ python:
 install:
   - pip install -r requirements.txt --use-mirrors
   - pip install -r optional-requirements.txt --use-mirrors
+  - pip install -r test-requirements.txt --use-mirrors
 script: python setup.py test
 notifications:
   irc: "irc.freenode.org#subliminal"
