--- a/tests/config.yml
+++ b/tests/config.yml
@@ -52,23 +52,25 @@ services:
     episodes:
       - id: 1
         languages: [ en, fr ]
-        results: 51
+        results: 55
       - id: 2
         languages: [ es, de ]
         results: 0
       - id: 3
         languages: [ pt-BR ]
         results: 3
+        sha1: [ 5cdee7395d31b214dce9502443de8bd3ab2d31f6, cc2bc4c8e33c246d6bc58be4bf04ddc723ad1ae8 ]
       - id: 3
         languages: [ alb ]
         results: 0
       - id: 4
         languages: [ pt-BR ]
-        results: 49
+        results: 53
     movies:
       - id: 1
         languages: [ en, fr ]
         results: 3
+        sha1: [ a172de8067a3fe2b97f52d8f07f38524336c85e7, 3c4d568692a5606ce6f39c3a4e4d57801fff902a, 09a686a7e30e74f53ec7975da4dbf22f4c103263 ]
       - id: 2
         languages: [ fr ]
         results: 37
@@ -80,6 +82,7 @@ services:
       - id: 1
         languages: [ en ]
         results: 4
+        sha1: [ 5cdee7395d31b214dce9502443de8bd3ab2d31f6, cc2bc4c8e33c246d6bc58be4bf04ddc723ad1ae8, a172de8067a3fe2b97f52d8f07f38524336c85e7 ]
       - id: 2
         languages: [ dut ]
         results: 0
