Add query unittests for BierDopje and OpenSubtitles

--- a/tests/config.yml
+++ b/tests/config.yml
@@ -5,7 +5,7 @@ movies:
     path: Brave (2012)/Brave.2012.720p.BluRay.x264.AC3-HDChina.mkv
     exists: True
     size: 3856469558
-    imdbid: tt1217209
+    imdbid: 1217209
     opensubtitles_hash: 76de24b871408e73
     thesubdb_hash: f8a7dd509898114ab1e549d07633a98b
   2:
@@ -16,7 +16,7 @@ movies:
     name: Inception
     year: 2010
     path: Inception (2010)/Inception - 1080p.mkv
-    imdbid: tt1375666
+    imdbid: 1375666
     opensubtitles_hash:
     thesubdb_hash:
 
@@ -27,7 +27,7 @@ episodes:
     episode: 6
     path: The Big Bang Theory/Season 05/The.Big.Bang.Theory.S05E06.HDTV.XviD-ASAP.mkv
   2:
-    name: Something is wrong with this name
+    series: Something is wrong with this name
     season: 1
     episode: 22
     path: Something is wrong with this name/Season 01/E22 - It does not exist.mkv
@@ -52,7 +52,7 @@ services:
     episodes:
       - id: 1
         languages: [ en, fr ]
-        results: 55
+        results: 46
       - id: 2
         languages: [ es, de ]
         results: 0
