Updated Addic7ed service to use dogpile.cache for caching.

--- a/tests/config.yml
+++ b/tests/config.yml
@@ -92,3 +92,17 @@ services:
       - id: 4
         languages: [ eng, dut ]
         results: 8
+  addic7ed:
+    episodes:
+      - id: 1
+        languages: [ en ]
+        results: 2
+      - id: 2
+        languages: [ es, de ]
+        results: 0
+      - id: 3
+        languages: [ eng, dut ]
+        results: 2
+      - id: 4
+        languages: [ eng, dut ]
+        results: 2
