Added more tests for Addic7ed service.

--- a/tests/config.yml
+++ b/tests/config.yml
@@ -97,6 +97,9 @@ services:
       - id: 1
         languages: [ en ]
         results: 2
+        sha1: [ 05e4777a072dcb732d8a8a2d18a04157c80cf877,
+                385a2af7bdd954be5528735d0e18f175e189befc,  # HI orig
+                be714c5114ee6bd9f53f691166d60dd023799cfe ] # HI updated
       - id: 2
         languages: [ es, de ]
         results: 0
