Move tests under subliminal module

--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,6 @@ pip-log.txt
 docs/_build
 
 # Subliminal unittests
-tests/*.srt
-tests/*_files
-tests/*_cache
+subliminal/tests/*.srt
+subliminal/tests/*_files
+subliminal/tests/*_cache
