--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-beautifulsoup4>=4.0
-guessit>=0.4.1
-requests
-enzyme>=0.1
+beautifulsoup4>=4.1.3
+guessit>=0.5.3
+requests>=1.1
+enzyme>=0.2
 html5lib
-dogpile.cache
+dogpile.cache>=0.4.1
