Update TheSubDB and add unittests

--- a/subliminal/tests/config.yml
+++ b/subliminal/tests/config.yml
@@ -199,3 +199,17 @@ services:
         languages: [ es, pt-BR, ca ]
         sha1: [ 999d3b16663f97e0d1ae97e7bc4a4b32e3c16eac ]
         results: 3
+  thesubdb:
+    episodes:
+      - id: 3
+        languages: [ en ]
+        results: 1
+        sha1: [ 8694d295bb12d219a7a720cecff60e63a3386f47 ]
+      - id: 3
+        languages: [ alb ]
+        results: 0
+    movies:
+      - id: 1
+        languages: [ pt ]
+        results: 1
+        sha1: [ faf12778f6792a3d59f98c26d4add7f9c4f7e456 ]
