--- a/subliminal/tests/config.yml
+++ b/subliminal/tests/config.yml
@@ -73,7 +73,7 @@ services:
       - id: 1
         languages: [ en ]
         results: 4
-        sha1: [ 5cdee7395d31b214dce9502443de8bd3ab2d31f6, cc2bc4c8e33c246d6bc58be4bf04ddc723ad1ae8, a172de8067a3fe2b97f52d8f07f38524336c85e7 ]
+        sha1: [ 5cdee7395d31b214dce9502443de8bd3ab2d31f6, cc2bc4c8e33c246d6bc58be4bf04ddc723ad1ae8, a172de8067a3fe2b97f52d8f07f38524336c85e7, 33de9931fc492158246e06840512389959ee887f ]
       - id: 2
         languages: [ dut ]
         results: 0
