Complete rewrite of subliminal

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,24 @@
 language: python
+
 python:
   - "2.7"
+
 install:
-  - pip install -r requirements.txt -r optional-requirements.txt -r test-requirements.txt --use-mirrors
-script: python setup.py test
+  - pip install coveralls --use-mirrors
+  - pip install -r requirements.txt --use-mirrors
+
+script:
+  - coverage run --source=subliminal setup.py test
+
+after_success:
+  - coveralls
+
 notifications:
-  irc: "irc.freenode.org#subliminal"
+  email: false
+  irc:
+    channels:
+      - "irc.freenode.org#subliminal"
+    on_success: change
+    on_failure: always
+    use_notice: true
+    skip_join: true
