--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
-beautifulsoup4>=4.1.3
-guessit>=0.5.3
-requests>=1.1
-enzyme>=0.2
-html5lib
-dogpile.cache>=0.4.1
+beautifulsoup4>=4.3.2
+guessit>=0.6.1
+requests>=2.0.0
+enzyme>=0.3.1
+html5lib>=0.99
+dogpile.cache>=0.5.1
+babelfish>=0.1.5
+lxml>=3.2.3
+charade>=1.0.3
+pysrt>=0.5.0
