--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,9 @@ pip-log.txt
 # Rope
 .ropeproject
 
+# Pycharm
+.idea
+
 # Sphinx
 docs/_build
 
@@ -41,4 +44,3 @@ docs/_build
 subliminal/tests/*.srt
 subliminal/tests/*_files
 subliminal/tests/*_cache
-/.idea
