--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,8 @@ requests>=2.0.1
 enzyme>=0.4.0
 html5lib>=0.99
 dogpile.cache>=0.5.2
-babelfish>=0.5.1
+babelfish>=0.5.3
 chardet>=2.2.1
 pysrt>=1.0.1
+python-dateutil>=2.2
 pyxdg>=0.25
