Update documentation and add doctests

--- a/setup.cfg
+++ b/setup.cfg
@@ -8,7 +8,7 @@ upload-dir = docs/_build/html
 
 [pytest]
 norecursedirs = build dist env .tox .eggs
-addopts = --pep8 --flakes
+addopts = --pep8 --flakes --doctest-glob='*.rst' --doctest-modules
 pep8maxlinelength = 120
 pep8ignore =
     docs/conf.py ALL
@@ -16,3 +16,4 @@ pep8ignore =
 flakes-ignore =
     docs/conf.py ALL
     subliminal/__init__.py UnusedImport
+doctest_optionflags= NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL
