--- a/setup.cfg
+++ b/setup.cfg
@@ -8,7 +8,7 @@ upload-dir = docs/_build/html
 
 [pytest]
 norecursedirs = build dist env .tox .eggs
-addopts = --pep8 --flakes --doctest-glob='*.rst' --doctest-modules
+addopts = --pep8 --flakes --doctest-glob='*.rst'
 pep8maxlinelength = 120
 pep8ignore =
     docs/conf.py ALL
