--- a/tests/cassettes/subscenter/test_login.yaml
+++ b/tests/cassettes/subscenter/test_login.yaml
@@ -2,7 +2,7 @@ interactions:
 - request:
     body: null
     headers:
-      User-Agent: [!!python/unicode 'Subliminal/1.1.0.dev0']
+      User-Agent: [Subliminal/1.1.0.dev0]
     method: GET
     uri: http://subscenter.cinemast.com/he/subscenter/accounts/login/
   response:
@@ -151,8 +151,8 @@ interactions:
         \ width=\"468\" height=\"60\" src=\"/static/images/site/advert.jpg\" alt=\"\
         \u05D0\u05E0\u05E9\u05D9 \u05E6\u05D5\u05D5\u05EA\" /></a>-->\r\n        \
         \    \r\n            <script type=\"text/javascript\">\r\n               \
-        \ if (jQuery.inArray(get_user_rank(), [1, 2, 3] )  == -1 )\r\n           \
-        \         document.write('<a href=\"http://www.techitout.co.il/\" target=\"\
+        \ //if (jQuery.inArray(get_user_rank(), [1, 2, 3] )  == -1 )\r\n         \
+        \           //document.write('<a href=\"http://www.techitout.co.il/\" target=\"\
         _blank\" id=\"advert\"><img src=\"/static/images/site/banners/techitout.jpg\"\
         \ width=\"468\" height=\"60\" alt=\"\u05D8\u05DB\u05E0\u05D5\u05DC\u05D5\u05D2\
         \u05D9\u05D4\" /></a>');\r\n            </script> \r\n                \r\n\
@@ -210,7 +210,7 @@ interactions:
         \ ><img src=\"/static/images/site/btn_donate_LG.gif\" alt=\"paypal\"></img></a>\r\
         \n                  <!--  <form action=\"https://www.paypal.com/cgi-bin/webscr\"\
         \ method=\"post\"><div style='display:none;'><input type='hidden' id='csrfmiddlewaretoken'\
-        \ name='csrfmiddlewaretoken' value='34f2edd223e414fc58661771b6e1c0a8' /></div>\r\
+        \ name='csrfmiddlewaretoken' value='8e2f1d328f0e5fbe63d9555f6c6bb0b5' /></div>\r\
         \n                        <input type=\"hidden\" name=\"cmd\" value=\"_s-xclick\"\
         >\r\n                        <input type=\"hidden\" name=\"hosted_button_id\"\
         \ value=\"ACBBWLFSMS9VY\">\r\n                        <input type=\"image\"\
@@ -445,8 +445,8 @@ interactions:
         </div>\r\n\t\t\t\t\t</div>\r\n\t\t\t\t\t<div class=\"generalWindowBottom\"\
         >\r\n\t\t\t\t\t\t\r\n\t\t\t\t\t\t\t\r\n\t\t\t\t\t\t\t\r\n\t\t\t\t\t\t<form\
         \ method=\"post\" action=\".\"><div style='display:none;'><input type='hidden'\
-        \  name='csrfmiddlewaretoken' value='34f2edd223e414fc58661771b6e1c0a8' /></div><div\
-        \ style='display:none'><input type='hidden' name='csrfmiddlewaretoken' value='34f2edd223e414fc58661771b6e1c0a8'\
+        \  name='csrfmiddlewaretoken' value='8e2f1d328f0e5fbe63d9555f6c6bb0b5' /></div><div\
+        \ style='display:none'><input type='hidden' name='csrfmiddlewaretoken' value='8e2f1d328f0e5fbe63d9555f6c6bb0b5'\
         \ /></div>\r\n\t\t\t\t\t\t<br />\r\n\t\t\t\t\t\t\r\n\t\t\t\t\t\t     \r\n\t\
         \                             \r\n\t\t                               \r\n\t\
         \t                                  <input type=\"hidden\" name=\"next\" value=\"\
@@ -660,7 +660,7 @@ interactions:
         \ #12a0e0;\" >\u05E1\u05E8\u05D8\u05D9\u05DD \u05D7\u05D3\u05E9\u05D9\u05DD\
         :</span>\r\n                    \r\n                        \r\n         \
         \           \r\n                         \r\n                         <span\
-        \ style=\"color:#ecedf2\" >  &nbsp; &nbsp; &nbsp; 29/08/15 12:08:35 </span>\r\
+        \ style=\"color:#ecedf2\" >  &nbsp; &nbsp; &nbsp; 13/09/15 03:09:13 </span>\r\
         \n                    </div>\r\n                    <div class=\"text\">\r\
         \n                    <span style=\"font-weight: 700;color: #12a0e0;\" >\u05E1\
         \u05D3\u05E8\u05D5\u05EA \u05D7\u05D3\u05E9\u05D5\u05EA:</span>\r\n      \
@@ -735,7 +735,7 @@ interactions:
         \n            <div id=\"bgRightBottom\"></div>\r\n        </div>\r\n    </div>\r\
         \n    \r\n\r\n\r\n\r\n        \r\n                                       \r\
         \n            \r\n    <div class=\"clear\"></div>\r\n    \r\n    \r\n\r\n\
-        \        \r\n\r\n\r\n<div style=\"color: white;\" > 29/08/15 12:08:35 \r\n\
+        \        \r\n\r\n\r\n<div style=\"color: white;\" > 13/09/15 03:09:13 \r\n\
         \                                                                        \
         \        \r\n                    <span onclick=\"javascript:location.href='/en/'\"\
         \  > en  </span>                                                         \
@@ -778,7 +778,7 @@ interactions:
         \ />\t\t   \r\n\t\t</div>\r\n\r\n        <div class=\"CinemaFloatingTabItems\"\
         \ >\r\n        \r\n        \r\n        <form method=\"POST\" class=\"sendComment\"\
         \ id=\"box_form\"><div style='display:none;'><input type='hidden'  name='csrfmiddlewaretoken'\
-        \ value='34f2edd223e414fc58661771b6e1c0a8' /></div>\r\n\t\t\r\n\t\t<div style=\"\
+        \ value='8e2f1d328f0e5fbe63d9555f6c6bb0b5' /></div>\r\n\t\t\r\n\t\t<div style=\"\
         font-size: 14px;font-weight: bold;margin-bottom: 10px;\">\r\n\t\t<span id=\"\
         box_text_about\" style=\"direction: rtl;float:right;\"></span>\r\n\t\t<span\
         \ id=\"box_type\" style=\"direction: rtl;float:right;\"></span>\r\n\t\t<span\
@@ -811,22 +811,22 @@ interactions:
       connection: [keep-alive]
       content-language: [he]
       content-type: [text/html; charset=utf-8]
-      date: ['Sat, 29 Aug 2015 17:25:35 GMT']
-      expires: ['Sat, 29 Aug 2015 17:25:35 GMT']
-      last-modified: ['Sat, 29 Aug 2015 17:25:35 GMT']
-      server: [nginx/0.8.55]
-      set-cookie: [csrftoken=34f2edd223e414fc58661771b6e1c0a8; Max-Age=31449600; Path=/;,
-        'sessionid=613d68d66c45330829f9985fbef6d8b1; Domain=.cinemast.com; expires=Sat,
-          12-Sep-2015 17:25:35 GMT; Max-Age=1209600; Path=/;']
+      date: ['Sun, 13 Sep 2015 20:33:13 GMT']
+      expires: ['Sun, 13 Sep 2015 20:33:13 GMT']
+      last-modified: ['Sun, 13 Sep 2015 20:33:13 GMT']
+      server: [nginx/1.8.0]
+      set-cookie: [csrftoken=8e2f1d328f0e5fbe63d9555f6c6bb0b5; Max-Age=31449600; Path=/;,
+        'sessionid=227c3ad75947513a5ec710704182eef4; Domain=.cinemast.com; expires=Sun,
+          27-Sep-2015 20:33:13 GMT; Max-Age=1209600; Path=/;']
       vary: [Accept-Encoding, Cookie]
     status: {code: 200, message: OK}
 - request:
-    body: username=subliminal%40gmail.com&csrfmiddlewaretoken=34f2edd223e414fc58661771b6e1c0a8&password=subliminal&next=%2Fhe%2F
+    body: username=subliminal%40gmail.com&csrfmiddlewaretoken=8e2f1d328f0e5fbe63d9555f6c6bb0b5&password=subliminal&next=%2Fhe%2F
     headers:
       Content-Length: ['118']
       Content-Type: [application/x-www-form-urlencoded]
-      Cookie: [csrftoken=34f2edd223e414fc58661771b6e1c0a8; sessionid=613d68d66c45330829f9985fbef6d8b1]
-      User-Agent: [!!python/unicode 'Subliminal/1.1.0.dev0']
+      Cookie: [csrftoken=8e2f1d328f0e5fbe63d9555f6c6bb0b5; sessionid=227c3ad75947513a5ec710704182eef4]
+      User-Agent: [Subliminal/1.1.0.dev0]
     method: POST
     uri: http://subscenter.cinemast.com/he/subscenter/accounts/login/
   response:
@@ -837,15 +837,15 @@ interactions:
       content-language: [he]
       content-length: ['0']
       content-type: [text/html; charset=utf-8]
-      date: ['Sat, 29 Aug 2015 17:25:36 GMT']
+      date: ['Sun, 13 Sep 2015 20:33:14 GMT']
       etag: ['"d41d8cd98f00b204e9800998ecf8427e"']
-      expires: ['Sat, 29 Aug 2015 17:25:36 GMT']
-      last-modified: ['Sat, 29 Aug 2015 17:25:36 GMT']
+      expires: ['Sun, 13 Sep 2015 20:33:14 GMT']
+      last-modified: ['Sun, 13 Sep 2015 20:33:14 GMT']
       location: ['http://subscenter.cinemast.com/he/']
-      server: [nginx/0.8.55]
-      set-cookie: [csrftoken=34f2edd223e414fc58661771b6e1c0a8; Max-Age=31449600; Path=/;,
-        'sessionid=0801878284e4400f07430f2edffc7dc7; Domain=.cinemast.com; expires=Sat,
-          12-Sep-2015 17:25:36 GMT; Max-Age=1209600; Path=/;']
+      server: [nginx/1.8.0]
+      set-cookie: [csrftoken=8e2f1d328f0e5fbe63d9555f6c6bb0b5; Max-Age=31449600; Path=/;,
+        'sessionid=385e54e71b22a056ec5676dc41a793a1; Domain=.cinemast.com; expires=Sun,
+          27-Sep-2015 20:33:14 GMT; Max-Age=1209600; Path=/;']
       vary: [Cookie]
     status: {code: 302, message: Found}
 version: 1
