--- a/tests/cassettes/subscenter/test_login_bad_password.yaml
+++ b/tests/cassettes/subscenter/test_login_bad_password.yaml
@@ -2,7 +2,7 @@ interactions:
 - request:
     body: null
     headers:
-      User-Agent: [!!python/unicode 'Subliminal/1.1.0.dev0']
+      User-Agent: [Subliminal/1.1.0.dev0]
     method: GET
     uri: http://subscenter.cinemast.com/he/subscenter/accounts/login/
   response:
@@ -151,8 +151,8 @@ interactions:
         \ width=\"468\" height=\"60\" src=\"/static/images/site/advert.jpg\" alt=\"\
         \u05D0\u05E0\u05E9\u05D9 \u05E6\u05D5\u05D5\u05EA\" /></a>-->\r\n        \
         \    \r\n            <script type=\"text/javascript\">\r\n               \
-        \ if (jQuery.inArray(get_user_rank(), [1, 2, 3] )  == -1 )\r\n           \
-        \         document.write('<a href=\"http://www.techitout.co.il/\" target=\"\
+        \ //if (jQuery.inArray(get_user_rank(), [1, 2, 3] )  == -1 )\r\n         \
+        \           //document.write('<a href=\"http://www.techitout.co.il/\" target=\"\
         _blank\" id=\"advert\"><img src=\"/static/images/site/banners/techitout.jpg\"\
         \ width=\"468\" height=\"60\" alt=\"\u05D8\u05DB\u05E0\u05D5\u05DC\u05D5\u05D2\
         \u05D9\u05D4\" /></a>');\r\n            </script> \r\n                \r\n\
@@ -210,7 +210,7 @@ interactions:
         \ ><img src=\"/static/images/site/btn_donate_LG.gif\" alt=\"paypal\"></img></a>\r\
         \n                  <!--  <form action=\"https://www.paypal.com/cgi-bin/webscr\"\
         \ method=\"post\"><div style='display:none;'><input type='hidden' id='csrfmiddlewaretoken'\
-        \ name='csrfmiddlewaretoken' value='72873335ea1fb54b678947d8abe94969' /></div>\r\
+        \ name='csrfmiddlewaretoken' value='a5ab39fdc9dd74db56811df3a2556c07' /></div>\r\
         \n                        <input type=\"hidden\" name=\"cmd\" value=\"_s-xclick\"\
         >\r\n                        <input type=\"hidden\" name=\"hosted_button_id\"\
         \ value=\"ACBBWLFSMS9VY\">\r\n                        <input type=\"image\"\
@@ -445,8 +445,8 @@ interactions:
         </div>\r\n\t\t\t\t\t</div>\r\n\t\t\t\t\t<div class=\"generalWindowBottom\"\
         >\r\n\t\t\t\t\t\t\r\n\t\t\t\t\t\t\t\r\n\t\t\t\t\t\t\t\r\n\t\t\t\t\t\t<form\
         \ method=\"post\" action=\".\"><div style='display:none;'><input type='hidden'\
-        \  name='csrfmiddlewaretoken' value='72873335ea1fb54b678947d8abe94969' /></div><div\
-        \ style='display:none'><input type='hidden' name='csrfmiddlewaretoken' value='72873335ea1fb54b678947d8abe94969'\
+        \  name='csrfmiddlewaretoken' value='a5ab39fdc9dd74db56811df3a2556c07' /></div><div\
+        \ style='display:none'><input type='hidden' name='csrfmiddlewaretoken' value='a5ab39fdc9dd74db56811df3a2556c07'\
         \ /></div>\r\n\t\t\t\t\t\t<br />\r\n\t\t\t\t\t\t\r\n\t\t\t\t\t\t     \r\n\t\
         \                             \r\n\t\t                               \r\n\t\
         \t                                  <input type=\"hidden\" name=\"next\" value=\"\
@@ -660,7 +660,7 @@ interactions:
         \ #12a0e0;\" >\u05E1\u05E8\u05D8\u05D9\u05DD \u05D7\u05D3\u05E9\u05D9\u05DD\
         :</span>\r\n                    \r\n                        \r\n         \
         \           \r\n                         \r\n                         <span\
-        \ style=\"color:#ecedf2\" >  &nbsp; &nbsp; &nbsp; 29/08/15 12:08:38 </span>\r\
+        \ style=\"color:#ecedf2\" >  &nbsp; &nbsp; &nbsp; 13/09/15 03:09:15 </span>\r\
         \n                    </div>\r\n                    <div class=\"text\">\r\
         \n                    <span style=\"font-weight: 700;color: #12a0e0;\" >\u05E1\
         \u05D3\u05E8\u05D5\u05EA \u05D7\u05D3\u05E9\u05D5\u05EA:</span>\r\n      \
@@ -735,7 +735,7 @@ interactions:
         \n            <div id=\"bgRightBottom\"></div>\r\n        </div>\r\n    </div>\r\
         \n    \r\n\r\n\r\n\r\n        \r\n                                       \r\
         \n            \r\n    <div class=\"clear\"></div>\r\n    \r\n    \r\n\r\n\
-        \        \r\n\r\n\r\n<div style=\"color: white;\" > 29/08/15 12:08:38 \r\n\
+        \        \r\n\r\n\r\n<div style=\"color: white;\" > 13/09/15 03:09:15 \r\n\
         \                                                                        \
         \        \r\n                    <span onclick=\"javascript:location.href='/en/'\"\
         \  > en  </span>                                                         \
@@ -778,7 +778,7 @@ interactions:
         \ />\t\t   \r\n\t\t</div>\r\n\r\n        <div class=\"CinemaFloatingTabItems\"\
         \ >\r\n        \r\n        \r\n        <form method=\"POST\" class=\"sendComment\"\
         \ id=\"box_form\"><div style='display:none;'><input type='hidden'  name='csrfmiddlewaretoken'\
-        \ value='72873335ea1fb54b678947d8abe94969' /></div>\r\n\t\t\r\n\t\t<div style=\"\
+        \ value='a5ab39fdc9dd74db56811df3a2556c07' /></div>\r\n\t\t\r\n\t\t<div style=\"\
         font-size: 14px;font-weight: bold;margin-bottom: 10px;\">\r\n\t\t<span id=\"\
         box_text_about\" style=\"direction: rtl;float:right;\"></span>\r\n\t\t<span\
         \ id=\"box_type\" style=\"direction: rtl;float:right;\"></span>\r\n\t\t<span\
@@ -811,22 +811,22 @@ interactions:
       connection: [keep-alive]
       content-language: [he]
       content-type: [text/html; charset=utf-8]
-      date: ['Sat, 29 Aug 2015 17:25:38 GMT']
-      expires: ['Sat, 29 Aug 2015 17:25:38 GMT']
-      last-modified: ['Sat, 29 Aug 2015 17:25:38 GMT']
-      server: [nginx/0.8.55]
-      set-cookie: [csrftoken=72873335ea1fb54b678947d8abe94969; Max-Age=31449600; Path=/;,
-        'sessionid=6dbe30f6a1068c72ddd9198061dd3201; Domain=.cinemast.com; expires=Sat,
-          12-Sep-2015 17:25:38 GMT; Max-Age=1209600; Path=/;']
+      date: ['Sun, 13 Sep 2015 20:33:15 GMT']
+      expires: ['Sun, 13 Sep 2015 20:33:15 GMT']
+      last-modified: ['Sun, 13 Sep 2015 20:33:15 GMT']
+      server: [nginx/1.8.0]
+      set-cookie: [csrftoken=a5ab39fdc9dd74db56811df3a2556c07; Max-Age=31449600; Path=/;,
+        'sessionid=2de796bd8cb998915a2c505d0bcf8725; Domain=.cinemast.com; expires=Sun,
+          27-Sep-2015 20:33:15 GMT; Max-Age=1209600; Path=/;']
       vary: [Accept-Encoding, Cookie]
     status: {code: 200, message: OK}
 - request:
-    body: username=subliminal%40gmail.com&csrfmiddlewaretoken=72873335ea1fb54b678947d8abe94969&password=lanimilbus&next=%2Fhe%2F
+    body: username=subliminal%40gmail.com&csrfmiddlewaretoken=a5ab39fdc9dd74db56811df3a2556c07&password=lanimilbus&next=%2Fhe%2F
     headers:
       Content-Length: ['118']
       Content-Type: [application/x-www-form-urlencoded]
-      Cookie: [csrftoken=72873335ea1fb54b678947d8abe94969; sessionid=6dbe30f6a1068c72ddd9198061dd3201]
-      User-Agent: [!!python/unicode 'Subliminal/1.1.0.dev0']
+      Cookie: [csrftoken=a5ab39fdc9dd74db56811df3a2556c07; sessionid=2de796bd8cb998915a2c505d0bcf8725]
+      User-Agent: [Subliminal/1.1.0.dev0]
     method: POST
     uri: http://subscenter.cinemast.com/he/subscenter/accounts/login/
   response:
@@ -975,8 +975,8 @@ interactions:
         \ width=\"468\" height=\"60\" src=\"/static/images/site/advert.jpg\" alt=\"\
         \u05D0\u05E0\u05E9\u05D9 \u05E6\u05D5\u05D5\u05EA\" /></a>-->\r\n        \
         \    \r\n            <script type=\"text/javascript\">\r\n               \
-        \ if (jQuery.inArray(get_user_rank(), [1, 2, 3] )  == -1 )\r\n           \
-        \         document.write('<a href=\"http://www.techitout.co.il/\" target=\"\
+        \ //if (jQuery.inArray(get_user_rank(), [1, 2, 3] )  == -1 )\r\n         \
+        \           //document.write('<a href=\"http://www.techitout.co.il/\" target=\"\
         _blank\" id=\"advert\"><img src=\"/static/images/site/banners/techitout.jpg\"\
         \ width=\"468\" height=\"60\" alt=\"\u05D8\u05DB\u05E0\u05D5\u05DC\u05D5\u05D2\
         \u05D9\u05D4\" /></a>');\r\n            </script> \r\n                \r\n\
@@ -1034,7 +1034,7 @@ interactions:
         \ ><img src=\"/static/images/site/btn_donate_LG.gif\" alt=\"paypal\"></img></a>\r\
         \n                  <!--  <form action=\"https://www.paypal.com/cgi-bin/webscr\"\
         \ method=\"post\"><div style='display:none;'><input type='hidden' id='csrfmiddlewaretoken'\
-        \ name='csrfmiddlewaretoken' value='72873335ea1fb54b678947d8abe94969' /></div>\r\
+        \ name='csrfmiddlewaretoken' value='a5ab39fdc9dd74db56811df3a2556c07' /></div>\r\
         \n                        <input type=\"hidden\" name=\"cmd\" value=\"_s-xclick\"\
         >\r\n                        <input type=\"hidden\" name=\"hosted_button_id\"\
         \ value=\"ACBBWLFSMS9VY\">\r\n                        <input type=\"image\"\
@@ -1282,9 +1282,9 @@ interactions:
         \n\t\t\t\t\t\t\t\t\t\t\t\t</tr>\r\n\t\t\t\t\t\t\t\t\t\t\t\t\r\n\t\t\t\t\t\t\
         \t\t\t\t</p>\r\n\t\t\t\t\t\t\t\t</div>\t\t\r\n\t\t\t\t\t\t\t\r\n\t\t\t\t\t\
         \t\t\r\n\t\t\t\t\t\t<form method=\"post\" action=\".\"><div style='display:none;'><input\
-        \ type='hidden'  name='csrfmiddlewaretoken' value='72873335ea1fb54b678947d8abe94969'\
+        \ type='hidden'  name='csrfmiddlewaretoken' value='a5ab39fdc9dd74db56811df3a2556c07'\
         \ /></div><div style='display:none'><input type='hidden' name='csrfmiddlewaretoken'\
-        \ value='72873335ea1fb54b678947d8abe94969' /></div>\r\n\t\t\t\t\t\t<br />\r\
+        \ value='a5ab39fdc9dd74db56811df3a2556c07' /></div>\r\n\t\t\t\t\t\t<br />\r\
         \n\t\t\t\t\t\t\r\n\t\t\t\t\t\t     \r\n\t\t\t\t\t\t          \r\n\t\t\t\t\t\
         \t              \r\n\t\t\t\t\t\t                  <input type=\"hidden\" name=\"\
         next\" value=\"/he/\"  />\r\n\t\t\t\t\t\t              \r\n\t\t\t\t\t\t  \
@@ -1497,7 +1497,7 @@ interactions:
         \ #12a0e0;\" >\u05E1\u05E8\u05D8\u05D9\u05DD \u05D7\u05D3\u05E9\u05D9\u05DD\
         :</span>\r\n                    \r\n                        \r\n         \
         \           \r\n                         \r\n                         <span\
-        \ style=\"color:#ecedf2\" >  &nbsp; &nbsp; &nbsp; 29/08/15 12:08:40 </span>\r\
+        \ style=\"color:#ecedf2\" >  &nbsp; &nbsp; &nbsp; 13/09/15 03:09:16 </span>\r\
         \n                    </div>\r\n                    <div class=\"text\">\r\
         \n                    <span style=\"font-weight: 700;color: #12a0e0;\" >\u05E1\
         \u05D3\u05E8\u05D5\u05EA \u05D7\u05D3\u05E9\u05D5\u05EA:</span>\r\n      \
@@ -1572,7 +1572,7 @@ interactions:
         \n            <div id=\"bgRightBottom\"></div>\r\n        </div>\r\n    </div>\r\
         \n    \r\n\r\n\r\n\r\n        \r\n                                       \r\
         \n            \r\n    <div class=\"clear\"></div>\r\n    \r\n    \r\n\r\n\
-        \        \r\n\r\n\r\n<div style=\"color: white;\" > 29/08/15 12:08:40 \r\n\
+        \        \r\n\r\n\r\n<div style=\"color: white;\" > 13/09/15 03:09:16 \r\n\
         \                                                                        \
         \        \r\n                    <span onclick=\"javascript:location.href='/en/'\"\
         \  > en  </span>                                                         \
@@ -1615,7 +1615,7 @@ interactions:
         \ />\t\t   \r\n\t\t</div>\r\n\r\n        <div class=\"CinemaFloatingTabItems\"\
         \ >\r\n        \r\n        \r\n        <form method=\"POST\" class=\"sendComment\"\
         \ id=\"box_form\"><div style='display:none;'><input type='hidden'  name='csrfmiddlewaretoken'\
-        \ value='72873335ea1fb54b678947d8abe94969' /></div>\r\n\t\t\r\n\t\t<div style=\"\
+        \ value='a5ab39fdc9dd74db56811df3a2556c07' /></div>\r\n\t\t\r\n\t\t<div style=\"\
         font-size: 14px;font-weight: bold;margin-bottom: 10px;\">\r\n\t\t<span id=\"\
         box_text_about\" style=\"direction: rtl;float:right;\"></span>\r\n\t\t<span\
         \ id=\"box_type\" style=\"direction: rtl;float:right;\"></span>\r\n\t\t<span\
@@ -1648,13 +1648,13 @@ interactions:
       connection: [keep-alive]
       content-language: [he]
       content-type: [text/html; charset=utf-8]
-      date: ['Sat, 29 Aug 2015 17:25:40 GMT']
-      expires: ['Sat, 29 Aug 2015 17:25:40 GMT']
-      last-modified: ['Sat, 29 Aug 2015 17:25:40 GMT']
-      server: [nginx/0.8.55]
-      set-cookie: [csrftoken=72873335ea1fb54b678947d8abe94969; Max-Age=31449600; Path=/;,
-        'sessionid=6dbe30f6a1068c72ddd9198061dd3201; Domain=.cinemast.com; expires=Sat,
-          12-Sep-2015 17:25:40 GMT; Max-Age=1209600; Path=/;']
+      date: ['Sun, 13 Sep 2015 20:33:16 GMT']
+      expires: ['Sun, 13 Sep 2015 20:33:16 GMT']
+      last-modified: ['Sun, 13 Sep 2015 20:33:16 GMT']
+      server: [nginx/1.8.0]
+      set-cookie: [csrftoken=a5ab39fdc9dd74db56811df3a2556c07; Max-Age=31449600; Path=/;,
+        'sessionid=2de796bd8cb998915a2c505d0bcf8725; Domain=.cinemast.com; expires=Sun,
+          27-Sep-2015 20:33:16 GMT; Max-Age=1209600; Path=/;']
       vary: [Accept-Encoding, Cookie]
     status: {code: 200, message: OK}
 version: 1
